--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">When is the 5 coming to Divisadero</string>
-    <string name="coming">The next outbound 5 coming to Divisadero is in %1$s minutes.</string>
+    <string name="coming">The outbound 5 is coming to Divisadero in %1$s minutes.</string>
+    <string name="not_coming">No outbound 5 is coming to Divisadero</string>
+    <string name="error_coming">No idea when the next outbound 5 is coming.</string>
 </resources>
